--- a/.github/workflows/base2.yml
+++ b/.github/workflows/base2.yml
@@ -27,7 +27,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: version
-        run: echo The current version is : pre-b1.0.2-a4
+        run: echo The current version is  pre-b1.0.2-a4
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
