--- a/.github/workflows/CheckErrors.yml
+++ b/.github/workflows/CheckErrors.yml
@@ -22,7 +22,7 @@ jobs: WindowsErr
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: PocketAPI/checkforerrors@v1
+      - uses: actions/checkout@v4
 
       # Runs a single command using the runners shell
       - name: Check
