--- a/.github/workflows/WindowsErr.yml
+++ b/.github/workflows/WindowsErr.yml
@@ -54,10 +54,10 @@ jobs:
           echo 13/15 checks
           echo 14/15 checks
           echo 15/15 checks
-          echo Attempt 1 failed ; Reason : Error detected!
+          echo Attempt 1 failed | Reason : Error detected!
           echo Attempt 2 started
           echo 15/15 checks
-          echo Attempt 2 failed ; Reason : Error detected!
+          echo Attempt 2 failed | Reason : Error detected!
           echo Final attempt started
           echo 15/15 checks
           echo Test Failed!!!
